增加ChatEnvelope实体类来封装返回的消息, 以及加上了一点点的ws逻辑,还有就是优化一些功能的实现,现在的msgId是服务端预生成的UUID,便于ws的发送与查询